--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,7 +15,20 @@ img {
 .landing-inner {
   padding-top: 80px;
 }
-
+.navbar {
+  background-color: #00b5ac;
+}
+.cd {
+  background-color: #00b5ac;
+}
+.footer {
+  background-color: #00b5ac;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+}
 .dark-overlay {
   background-color: rgba(0, 0, 0, 0.7);
   position: absolute;
@@ -24,7 +37,9 @@ img {
   width: 100%;
   height: 100%;
 }
-
+.cl {
+  color: white;
+}
 .card-form {
   opacity: 0.9;
 }
